--- a/docs/5.接口.md
+++ b/docs/5.接口.md
@@ -122,3 +122,70 @@ const area: A = {
     },
 }
 ```
+
+上面示例中，`A`继承了 `Shape`，因此 `A` 有了`Shape`的属性 `area` 和自己的属性`getArea`。实现 `A` 接口的对象`area`就需要实现这些属性。
+
+##### interface 与 type 的区别
+
+`type` 能够表示非对象类型，而 `interface` 只能表示对象类型。
+
+```ts
+type bizData = string | number | boolean
+```
+
+`interface` 可以继承其他对象类型，`type` 不支持继承，只能通过 `&` 运算符来重新定一个类型。
+
+```ts
+type Person = {
+    age: number
+}
+
+type Musician = Person & {
+    instrument: string
+}
+
+interface Musician extends Person {
+    instrument: string
+}
+```
+
+同名 `interface` 会自动合并，同名 `type` 则会报错。 `interface` 不允许与 `type` 同名。
+
+```ts
+type Person = {
+    age: number
+}
+
+interface Person {
+    name: string // error 标识符“Person”重复。
+}
+```
+
+`interface` 不能包含属性映射（`[prop in keyof A]`表示依次得到类型 `Point` 的所有属性名，然后将每个属性的类型改成`Point[Key]`，即为 `number`。）。
+
+```ts
+interface Point {
+  x: number;
+  y: number;
+}
+
+type Point1 = {
+  [Key in keyof Point]: Point[Key];
+};
+
+interface Point2 {
+    [Key in keyof Point]: Point[Key]; // error 应为声明或语句
+};
+```
+
+`this` 关键字只能用于 `interface`。
+
+```ts
+interface F {
+    add(num: number): this
+}
+
+type F = {
+    add(num: number): this // error "this" 类型仅在类或接口的非静态成员中可用。
+}
+```
