--- a/docs/2.数组与元组.md
+++ b/docs/2.数组与元组.md
@@ -98,7 +98,7 @@ const s1: S1 = ['rinvay', 18, 20]
 
 #### 只读元组
 
-使用 `readonly` 关键字和 `Readonly<T>` 工具范型。
+使用 `readonly` 关键字和 `Readonly<T>` 工具泛型。
 
 ```ts
 type t1 = readonly [string, number]
